2009-01-16  Janus Weil  <janus@gcc.gnu.org>

PR fortran/38152
	* expr.c (gfc_check_pointer_assign): Allow use-associated procedure
	pointers as lvalue.
	* trans-decl.c (get_proc_pointer_decl,gfc_create_module_variable):
	Enable procedure pointers as module variables.


2009-01-16  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/38152
	* gfortran.dg/proc_ptr_13.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143430 138bc75d-0d04-0410-961f-82ee72b054a4